fixed ios text wraping on download btn

--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ article {
 
 .section-icon {
   height: 1.3rem;
-  margin-left: 0.75rem;
+  margin: 0 0.5rem 0 1rem;
 }
 
 #achievements {
@@ -106,11 +106,9 @@ aside > section {
 .section-title-container {
   position: relative;
   left: -4rem;
-  display: flex;
-  align-items: left;
-  flex-direction: column;
+  display: inline-block;
   margin-top: 3rem;
-  width: 16rem;
+  min-width: 16rem;
 }
 
 .triangle {
@@ -146,6 +144,7 @@ aside > section {
 }
 
 #download-btn {
+  /* display: -webkit-flex; */
   display: flex;
   align-items: center;
   background-color: rgb(35, 149, 150);
@@ -172,6 +171,11 @@ aside > section {
   text-align: right;
   color: rgb(128, 128, 128);
   padding-top: 3rem;
+}
+
+#get-pdf-text {
+  white-space: nowrap;
+  text-transform: uppercase;
 }
 
 a {
